# r1_vlm

./: .gitignore  Dockerfile  pyproject.toml
demo/: requirements.txt
runpod/: Dockerfile  README.md  build_and_push.sh  build_docker.sh  main.py  setup_github.sh
src/r1_vlm/budget_forcing/: budget_forcing.py  budget_forcing_demo.py  budget_forcing_v2.py
src/r1_vlm/datasets/: utils.py
src/r1_vlm/datasets/aok_vqa/: aok_vqa.py  aok_vqa_base_for_eval.py  aok_vqa_da_tool_use_r1.py  aok_vqa_mc_r1.py  aok_vqa_mc_tool_use_7B_r1.py  aok_vqa_mc_tool_use_datamixing_r1.py  aok_vqa_mc_tool_use_r1.py  load_aokvqa.py
src/r1_vlm/datasets/hr_bench/: hr_bench_base_for_eval.py  hr_bench_tool_use_r1.py
src/r1_vlm/datasets/message_decoding_abc_zoom_in/: message_decoding_abc_zoom_in.py  message_decoding_abc_zoom_in_r1.py
src/r1_vlm/datasets/message_decoding_words/: message_decoding_words_dataset.py
src/r1_vlm/datasets/message_decoding_words_and_sequences_target_zoom_in/: message_decoding_words_and_sequences_target_zoom_in.py  message_decoding_words_and_sequences_target_zoom_in_r1.py
src/r1_vlm/datasets/message_decoding_words_and_sequences_zoom_in/: message_decoding_words_and_sequences_zoom_in.py  message_decoding_words_and_sequences_zoom_in_r1.py
src/r1_vlm/datasets/real_iad_toy_block/: preprocess_data.py
src/r1_vlm/datasets/real_iad_toy_brick/: toy_brick_dataset.py  toy_brick_r1_dataset.py  toy_brick_tool_use_r1_dataset.py
src/r1_vlm/datasets/text_vqa/: collect_demos.py  text_vqa_base_for_eval.py  text_vqa_r1.py  text_vqa_tool_use_r1.py  zoom_demos.jsonl
src/r1_vlm/datasets/vstar/: vstar_base_for_eval.py  vstar_tool_use_r1.py
src/r1_vlm/deepspeed_configs/: multi_gpu_3only_zero3.yaml  multi_gpu_3only_zero3_no_checkpointing.yaml  multi_gpu_4only.yaml  multi_gpu_4only_zero3.yaml  multi_gpu_6only.yaml  multi_gpu_6only_zero3.yaml
src/r1_vlm/environments/: multistep_vision_env.py  regex_outline.txt  reward_schedules.py  simple_vision_env.py  tool_vision_env.py
src/r1_vlm/environments/digit_recognition_env/: train.py  train_budget_forcing.py  train_debug.py  train_lora.py
src/r1_vlm/environments/digits_doublecheck_env/: digits_doublecheck_env.py
src/r1_vlm/environments/digits_tool_use/: digits_tool_use_env.py  train.py
src/r1_vlm/environments/hr_bench_eval/: eval_hrbench.py  eval_hrbench_base.py  hr_bench_eval_env.py
src/r1_vlm/environments/message_decoding_abc_zoom_in_env/: message_decoding_abc_zoom_in_env.py  train.py
src/r1_vlm/environments/message_decoding_words_and_sequences_target_zoom_in/: message_decoding_target_zoom_in_env.py  train.py
src/r1_vlm/environments/message_decoding_zoom_in_env/: message_decoding_zoom_in_env.py  train.py
src/r1_vlm/environments/real_iad_env/: completion_generation.py  launch_completion_generation_single.sh  real_iad_simple_env.py  real_iad_tool_env.py  simple_env_budget_forcing_train.py  simple_env_post_sft_train.py  simple_env_train.py  todo.txt  tool_env_train.py
src/r1_vlm/environments/simple_aokvqa_env/: eval.py  (+2 more)
src/r1_vlm/eval/: eval_vstar.py
src/r1_vlm/reasoning_similarity/: reasoning_similarity.ipynb  reasoning_similarity_scaled.ipynb
src/r1_vlm/tools/: digits_answer_tool.py  display_bounding_box.py  message_decoding_zoom_in_tool.py  object_detection.py  tool_prompts.py  zoom.py
tool_server/: .gitignore  README.md  infer.py  main.py  pyproject.toml  setup_triton_repository.py  start_server.py  test.py  training_server.py
(+38 files in other folders)
