[build-system]
requires = ["hatchling", "torch==2.5.1"]
build-backend = "hatchling.build"

[project]
name = "r1-vlm"
version = "0.1.0"
description = "GRPO for VLMs"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Sunil Kumar", email = "sdkumar@hmc.edu" }
]
license = { text = "MIT" }
dependencies = [
    "accelerate>=1.3.0",
    "datasets>=3.2.0",
    "deepspeed>=0.16.3",
    "gradio>=5.16.0",
    "imgcat>=0.6.0",
    "ipdb>=0.13.13",
    "jinja2>=3.1.5",
    "peft>=0.14.0",
    "pycocotools>=2.0.8",
    "python-dotenv>=1.0.1",
    "qwen-vl-utils>=0.0.11",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "transformers==4.50.0",
    "vllm==0.7.3",
    "wandb>=0.19.5",
    "verifiers",
    "flash-attn==2.7.3",
    "spaces>=0.32.0",
    "imageio>=2.37.0",
    "levenshtein>=0.27.1",
    "pillow>=11.1.0",
    "runpod>=1.7.7",
    "pytest>=8.3.5",
    "liger-kernel>=0.5.6",
    "notebook>=7.4.0",
    "ipykernel>=6.29.5",
    "unsloth>=2025.3.19",
    "ms-swift>=1.3.0",
    "modelscope>=1.25.0",
    "addict>=2.4.0",
    "sentence-transformers>=4.1.0",
    "tiktoken>=0.9.0",
    "openai>=1.65.4",
    "opencv-python>=4.11.0.86",
    "tritonclient[all]>=2.51.0",
    "ultralytics>=8.3.120",
    "plotly>=6.0.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
trl = { path = "../trl", editable = true }
verifiers = { path = "../verifiers", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/r1_vlm"]
