[project]
name = "tool-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "clip",
    "imgcat>=0.6.0",
    "mobileclip",
    "tritonclient[all]>=2.56.0",
    "ultralytics>=8.3.112",
    "onnx==1.16.0",
    "tensorrt>=10.9.0.34",
    "onnxslim>=0.1.50",
    "onnxruntime-gpu>=1.21.1",
]

[tool.uv.sources]
mobileclip = { git = "https://github.com/THU-MIG/yoloe.git", subdirectory = "third_party/ml-mobileclip" }
clip = { git = "https://github.com/ultralytics/CLIP.git" }
