[project]
name = "tool-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "clip",
    "imgcat>=0.6.0",
    "mobileclip",
    "tritonclient[all]>=2.56.0",
    "ultralytics>=8.3.112",
    "onnx==1.16.0",
    "tensorrt>=10.9.0.34",
    "onnxslim>=0.1.50",
    "onnxruntime-gpu>=1.21.1",
    "onnxruntime>=1.21.1",
    "ipdb>=0.13.13",
    "numpy>=1.26.4",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
    "fastapi>=0.115.12",
]

[tool.uv.sources]
mobileclip = { git = "https://github.com/THU-MIG/yoloe.git", subdirectory = "third_party/ml-mobileclip" }
clip = { git = "https://github.com/ultralytics/CLIP.git" }
